--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,25 +7,6 @@ body {
     font-family: 'Luckiest Guy', cursive;
 }
 
-@media only screen and (min-width: 600px) {
-    .displayBtns {
-        -webkit-column-count: 2;
-        /* Chrome, Safari, Opera */
-        -moz-column-count: 2;
-        /* Firefox */
-        column-count: 2;
-        padding-top: 10%;
-    }
-    .main {
-        -webkit-column-count: 5;
-        /* Chrome, Safari, Opera */
-        -moz-column-count: 5;
-        /* Firefox */
-        column-count: 5;
-        column-fill: balance;
-    }
-}
-
 .main div {
     display: inline-block;
 }
@@ -64,7 +45,26 @@ body {
 }
 
 .tip {
-    font-style: italic;
-    font-size: 0.8em;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+@media only screen and (min-width: 600px) {
+    .displayBtns {
+        -webkit-column-count: 2;
+        /* Chrome, Safari, Opera */
+        -moz-column-count: 2;
+        /* Firefox */
+        column-count: 2;
+        padding-top: 10%;
+    }
+    .main {
+        -webkit-column-count: 5;
+        /* Chrome, Safari, Opera */
+        -moz-column-count: 5;
+        /* Firefox */
+        column-count: 5;
+        column-fill: balance;
+    }
 }
