tested api functionality and updated button tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,19 @@ body {
     font-size: 4em;
     margin: 10px;
     font-family: 'Luckiest Guy', cursive;
-    color: darkkhaki;
-    background-color: cadetblue;
+    color: yellow;
+    background-color: navy;
     border-bottom: beige;
     border-bottom-width: 10px;
     
+}
+
+.active {
+    font-size: 30px;
+}
+
+.searchField {
+    font-size: 25px;
 }
 
 .card {
@@ -46,9 +54,9 @@ body {
 
 .tip {
     font-family: 'Luckiest Guy', cursive;
-    color: darkblue;
-    font-size: 15px;
-    font-weight: bold;
+    color: yellow;
+    font-size: 35px;
+    background-color:navy;
 }
 
 @media only screen and (min-width: 600px) {
